// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase Citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1611553691951,
      "mascota": "Nuevo Nombre",
      "propietario": "Jose",
      "sintomas": "Solo duerme",
      "telefono": "10457889",
    },
  ],
}
`;

exports[`Probar la clase Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1611553691951,
      "mascota": "Clarita",
      "propietario": "Jose",
      "sintomas": "Solo duerme",
      "telefono": "10457889",
    },
  ],
}
`;

exports[`Probar la clase Citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
